# todo

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  tests.py
backend/app/: crud.py  db.py  main.py  models.py  routers.py  schemas.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.css
frontend/src/components/: EditTodoForm.js  Todo.js  TodoForm.js  TodoWrapper.js
