[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["vllscarf <xxxisa2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.5"
pydantic = "^2.10.2"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"
pytest = "^8.3.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
